--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,13 @@ canvas {
     margin: 0 75px;
     display: none;
 }
+
+#gameLost {
+    position: absolute;
+    z-index: 100;
+    height: 640px;
+    width: 960px;
+    background: red;
+    margin: 0 75px;
+    display: none;
+}
