--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,9 @@ p, a, button {
 
 /*---------------------------------- Game pages */
 canvas {
-    background: #e0a8b8;
+    background-image: url("/assets/img/breakoutBgOne.jpg");
+    background-size: 100%;
+    background-position-y: 80%;
     display: block;
     margin: 0 auto;
 }
