--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,14 @@ canvas {
     z-index: 100;
     height: 640px;
     width: 960px;
-    background: red;
+    background: rgba(0, 0, 0, 0.3);
     margin: 0 75px;
     display: none;
+}
+
+#loseText {
+    background: #fff;
+    padding: 3vw;
+    margin: 0 20vw;
+    border-radius: 10px;
 }
