--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,35 @@ p, a, button {
 
 /*---------------------------------- Index page */
 #menu {
-    margin: 20vh 0 auto auto;
+    padding-top: 5vh;
+    padding-bottom: 10vh;
+    background: rgba(255, 255, 255, 0.4);
+    border-radius: 10px;
+}
+
+#menu h1 {
+    margin-bottom: 1rem;
+}
+
+#heroImage {
+    background-image: url("/assets/img/dayBreakerMainMenu.jpg");
+    height: 100vh;
+    width: 100%;
+    background-size: 100%;
+    padding-top: 10vh;
+    padding-left: 30vw;
+    padding-right: 30vw;
+}
+
+/* Main menu */
+.btn--grey {
+    background-color: rgba(255, 255, 255, 0.6);
+    color: #000;
+}
+
+.btn--grey:hover {
+    background: rgba(0, 0, 0, 0.4);
+    color: #fafafa;
 }
 
 /*---------------------------------- Game pages */
@@ -56,6 +84,7 @@ canvas {
     border-radius: 10px;
 }
 
+/* Lose screen */
 #gameLost {
     position: absolute;
     z-index: 100;
@@ -72,7 +101,7 @@ canvas {
     margin: 0 20vw;
     border-radius: 10px;
 }
-
+/* Pause functions */
 #gamePaused {
     position: absolute;
     z-index: 100;
