--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ p, a, button {
 }
 
 #heroImage {
-    background-image: url("/assets/img/dayBreakerMainMenu.jpg");
+    background-image: url("./assets/img/dayBreakerMainMenu.jpg");
     height: 100vh;
     width: 100%;
     background-size: 100%;
@@ -80,6 +80,11 @@ canvas {
     border-radius: 10px;
 }
 
+#winText div button {
+    display: block;
+    margin: 1vh 0;
+}
+
 /* Lose screen */
 #gameLost {
     position: absolute;
@@ -117,7 +122,7 @@ canvas {
 
 /* ------------------------- Level 1 -------------------- */
 .backgroundLevelOne {
-    background-image: url("/assets/img/breakoutBgOne.jpg");
+    background-image: url("./assets/img/breakoutBgOne.jpg");
     background-size: 100%;
     background-position-y: 80%;
     display: block;
