Added files and basic frame for level 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,12 @@ canvas {
     display: block;
 }
 
-/* ------------------------- Level 1 -------------------- */
+/* ------------------------- Level 2 -------------------- */
+.backgroundLevelTwo {
+    background: grey;
+}
+
+/* ------------------------- Level 3 -------------------- */
 .backgroundLevelTwo {
     background: grey;
 }
