set up level three

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,6 @@ canvas {
 }
 
 /* ------------------------- Level 3 -------------------- */
-.backgroundLevelTwo {
+.backgroundLevelThree {
     background: grey;
 }
