added the color in the paddle and ball objects and moved those to the component JS files, changed the color in level 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,10 @@ canvas {
 
 /* ------------------------- Level 2 -------------------- */
 .backgroundLevelTwo {
-    background: grey;
+    background-image: url("../img/levelTwoBg.jpg");
+    background-size: 100%;
+    background-position-y: 20%;
+    display: block;
 }
 
 /* ------------------------- Level 3 -------------------- */
