--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,157 +1,182 @@
 /*---------------------------------- General Styles*/
+
 html {
-    height: 100vh;
+  height: 100vh;
 }
 
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Quicksand&display=swap');
-
-h1, h3, h5 {
-    font-family: 'Nunito', sans-serif;
+h1,
+h3,
+h5 {
+  font-family: 'Nunito', sans-serif;
 }
 
-p, a, button {
-    font-family: 'Quicksand', sans-serif;
+p,
+a,
+button {
+  font-family: 'Quicksand', sans-serif;
 }
+
 
 /*---------------------------------- Index page */
+
 #menu {
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-    background: rgba(255, 255, 255, 0.4);
-    border-radius: 10px;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 10px;
 }
 
 #menu h1 {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 #menu p a,
 #menu button {
-    width: 10vw;
+  width: 10vw;
 }
 
 #heroImage {
-    background-image: url("../img/dayBreakerMainMenu.jpg");
-    height: 100vh;
-    width: 100%;
-    background-size: 100%;
-    padding-top: 10vh;
-    padding-left: 30vw;
-    padding-right: 30vw;
+  background-image: url("../img/dayBreakerMainMenu.jpg");
+  height: 100vh;
+  width: 100%;
+  background-size: 100%;
+  padding-top: 10vh;
+  padding-left: 30vw;
+  padding-right: 30vw;
 }
 
+
 /* Main menu */
+
 .btn--grey {
-    background-color: rgba(255, 255, 255, 0.6);
-    color: #000;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #000;
 }
 
 .btn--grey:hover {
-    background: rgba(0, 0, 0, 0.4);
-    color: #fafafa;
+  background: rgba(0, 0, 0, 0.4);
+  color: #fafafa;
 }
+
 
 /*---------------------------------- Game pages */
+
 canvas {
-    margin: 0 75px;
+  margin: 0 75px;
 }
 
+
 /* -------------------- Game win and lose ---------------------- */
+
+
 /* Game win */
+
 .gameScreen {
-    padding-top: 5vh;
-    position: relative;
+  padding-top: 5vh;
+  position: relative;
 }
 
 .gameWon {
-    position: absolute;
-    z-index: 100;
-    height: 640px;
-    width: 960px;
-    background: rgba(255, 255, 255, 0.3);
-    margin: 0 75px;
-    display: none;
+  position: absolute;
+  z-index: 100;
+  height: 640px;
+  width: 960px;
+  background: rgba(255, 255, 255, 0.3);
+  margin: 0 75px;
+  display: none;
 }
 
 .winText {
-    background: #fff;
-    padding: 3vw;
-    margin: 0 20vw;
-    border-radius: 10px;
+  background: #fff;
+  padding: 3vw;
+  margin: 0 20vw;
+  border-radius: 10px;
 }
 
 .winText div button {
-    display: block;
-    margin: 1vh 0;
+  display: block;
+  margin: 1vh 0;
 }
 
+
 /* Lose screen */
+
 .gameLost {
-    position: absolute;
-    z-index: 100;
-    height: 640px;
-    width: 960px;
-    background: rgba(0, 0, 0, 0.3);
-    margin: 0 75px;
-    display: none;
+  position: absolute;
+  z-index: 100;
+  height: 640px;
+  width: 960px;
+  background: rgba(0, 0, 0, 0.3);
+  margin: 0 75px;
+  display: none;
 }
 
 .loseText {
-    background: #fff;
-    padding: 3vw;
-    margin: 0 20vw;
-    border-radius: 10px;
+  background: #fff;
+  padding: 3vw;
+  margin: 0 20vw;
+  border-radius: 10px;
 }
 
 .loseText div button {
-    display: block;
-    margin: 1vh 0;
+  display: block;
+  margin: 1vh 0;
 }
+
+
 /* Pause functions */
+
 .gamePaused {
-    position: absolute;
-    z-index: 100;
-    height: 640px;
-    width: 960px;
-    background: rgba(255, 255, 255, 0.3);
-    margin: 0 75px;
-    display: none;
+  position: absolute;
+  z-index: 100;
+  height: 640px;
+  width: 960px;
+  background: rgba(255, 255, 255, 0.3);
+  margin: 0 75px;
+  display: none;
 }
 
 .pauseText {
-    background: #fff;
-    padding: 3vw;
-    margin: 0 20vw;
-    border-radius: 10px;
+  background: #fff;
+  padding: 3vw;
+  margin: 0 20vw;
+  border-radius: 10px;
 }
 
 .pauseText div button {
-    display: block;
-    margin: 1vh 0;
+  display: block;
+  margin: 1vh 0;
 }
+
 
 /* ------------------------- Level 1 -------------------- */
+
 .backgroundLevelOne {
-    background-image: url("../img/breakoutBgOne.jpg");
-    background-size: 100%;
-    background-position-y: 80%;
-    display: block;
+  background-image: url("../img/breakoutBgOne.jpg");
+  background-size: 100%;
+  background-position-y: 80%;
+  display: block;
 }
+
 
 /* ------------------------- Level 2 -------------------- */
+
 .backgroundLevelTwo {
-    background-image: url("../img/levelTwoBg.jpg");
-    background-size: 100%;
-    background-position-y: 20%;
-    display: block;
+  background-image: url("../img/levelTwoBg.jpg");
+  background-size: 100%;
+  background-position-y: 20%;
+  display: block;
 }
 
+
 /* ------------------------- Level 3 -------------------- */
+
 .backgroundLevelThree {
-    background: grey;
+  background: grey;
 }
