--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,8 +85,8 @@ canvas {
 .gameWon {
   position: absolute;
   z-index: 100;
-  height: 640px;
-  width: 960px;
+  height: 100vh;
+  width: 100vw;
   background: rgba(255, 255, 255, 0.3);
   margin: 0 75px;
   display: none;
@@ -152,6 +152,24 @@ canvas {
 .pauseText div button {
   display: block;
   margin: 1vh 0;
+}
+/* Responsiveness for game screens and canvases */
+@media screen and (min-width: 1200px) and (max-height: 901px) {
+    canvas {
+        transform: scale(1.3);
+        margin-top: 50px;
+    }
+    .gameWon,
+    .gameLost,
+    .gamePaused {
+    height: 130%;
+    width: 111%;
+    top: -2vh;
+    left: -4vw;
+    padding-top: 8vh;
+    margin: 0;
+    max-height: 100vh;
+    }
 }
 
 
