--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,21 +154,91 @@ canvas {
   margin: 1vh 0;
 }
 /* Responsiveness for game screens and canvases */
+/* Ratio 16:9 */ 
 @media screen and (min-width: 1200px) and (max-height: 901px) {
     canvas {
         transform: scale(1.3);
-        margin-top: 50px;
+        margin-top: 11vh;
     }
     .gameWon,
     .gameLost,
     .gamePaused {
-    height: 130%;
-    width: 111%;
+    height: 100vh;
+    width: 100vw;
     top: -2vh;
-    left: -4vw;
+    left: -6vw;
     padding-top: 8vh;
     margin: 0;
     max-height: 100vh;
+    }
+
+    .winText,
+    .loseText,
+    .pauseText {
+        margin: 0 30vw;
+    }
+}
+
+@media screen and (min-width: 1240px) and (max-width: 1295px) and (min-height: 700px) and (max-height: 730px) {
+    canvas {
+        margin-top: 7vh; 
+        transform: scale(1.25)
+    }
+
+    .gameWon,
+    .gameLost,
+    .gamePaused {
+    height: 98vh;
+    width: 98vw;
+    top: -2vh;
+    left: -5vw;
+}
+
+@media screen and (min-width: 1300px) and (max-width: 1365px) and (min-height: 750px) and (max-height: 770px) {
+    canvas {
+        margin-top: 10vh;
+    }
+}
+
+@media screen and (min-width: 1500px) and (max-height: 901px) {
+    canvas {
+        transform: scale(1.5);
+        margin-top: 15vh;
+    }
+
+    .gameWon,
+    .gameLost,
+    .gamePaused {
+        height: 100vh;
+        width: 98vw;
+        top: -2vh;
+        left: -14vw;
+        padding-top: 10vh;
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 1900px) and (max-height: 1081px) {
+    canvas {
+        transform: scale(1.8);
+        margin-top: 20vh;
+    }
+    .gameWon,
+    .gameLost,
+    .gamePaused {
+    height: 100vh;
+    width: 100vw;
+    top: -2vh;
+    left: -20vw;
+    padding-top: 15vh;
+    margin: 0;
+    max-height: 100vh;
+    }
+
+    .winText,
+    .loseText,
+    .pauseText {
+        margin: 0 30vw;
     }
 }
 
