--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 html {
   height: 100vh;
+  overflow: hidden;
 }
 
 * {
@@ -151,6 +152,14 @@ canvas {
 .pauseText div button {
   display: block;
   margin: 1vh 0;
+}
+
+/* --------------------- Movement buttons --------------- */
+.movementButtons {
+    margin: 0;
+    width: 49vw;
+    border: none;
+    display: inline;
 }
 
 /* ------------------------- Level 1 -------------------- */
