--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 html {
   height: 100vh;
-  overflow: hidden;
+  position: relative;
 }
 
 * {
@@ -21,6 +21,12 @@ p,
 a,
 button {
   font-family: 'Quicksand', sans-serif;
+}
+
+.container {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -52,6 +58,22 @@ button {
   padding-right: 30vw;
 }
 
+@media screen and (max-aspect-ratio: 1/1) {
+    #heroImage {
+        padding: 10vh 3vh 0 3vh;
+    }
+
+    #menu p a,
+    #menu button {
+        width: 60vw;
+    }
+
+    #heroImage {
+        background-position-x: center;
+        background-size: cover;
+        background-repeat: none; 
+    }
+}
 
 /* Main menu */
 
@@ -90,6 +112,7 @@ canvas {
   background: rgba(255, 255, 255, 0.3);
   margin: 0;
   display: none;
+  overflow: none;
 }
 
 .winText {
@@ -110,11 +133,12 @@ canvas {
 .gameLost {
   position: absolute;
   z-index: 100;
-  height: 640px;
-  width: 960px;
+  height: 100vh;
+  width: 100vw;
   background: rgba(0, 0, 0, 0.3);
   margin: 0;
   display: none;
+  overflow: none;
 }
 
 .loseText {
@@ -135,11 +159,12 @@ canvas {
 .gamePaused {
   position: absolute;
   z-index: 100;
-  height: 640px;
-  width: 960px;
+  height: 100vh;
+  width: 100vw;
   background: rgba(255, 255, 255, 0.3);
   margin: 0;
   display: none;
+  overflow: none;
 }
 
 .pauseText {
@@ -160,6 +185,13 @@ canvas {
     width: 49vw;
     border: none;
     display: inline;
+    height: 15vh;
+    background: none;
+}
+
+.movementButtons i {
+    font-size: 4rem;
+    color: rgba(0, 0, 0, 0.3);
 }
 
 /* ------------------------- Level 1 -------------------- */
@@ -171,6 +203,13 @@ canvas {
   display: block;
 }
 
+@media screen and (max-aspect-ratio: 1/1) {
+    .backgroundLevelOne {
+        background-position: center;
+        background-size: cover;
+        background-repeat: none;
+    }
+}
 
 /* ------------------------- Level 2 -------------------- */
 
