applied the interactivity to level two as well

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,14 @@ canvas {
   display: block;
 }
 
+@media screen and (max-aspect-ratio: 1/1) {
+    .backgroundLevelTwo {
+        background-position: center;
+        background-size: cover;
+        background-repeat: none;
+    }
+}
+
 
 /* ------------------------- Level 3 -------------------- */
 
