--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Quicksand&display=swap');
 /*---------------------------------- General Styles*/
-
 html {
   height: 100vh;
   position: relative;
@@ -10,7 +10,6 @@ html {
   margin: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Quicksand&display=swap');
 h1,
 h3,
 h5 {
@@ -72,7 +71,7 @@ button {
     #heroImage {
         background-position-x: center;
         background-size: cover;
-        background-repeat: none; 
+        background-repeat: no-repeat; 
     }
 }
 
@@ -160,7 +159,7 @@ canvas {
   background: rgba(255, 255, 255, 0.3);
   margin: 0;
   display: none;
-  overflow: none;
+  overflow: hidden;
 }
 
 .winText {
@@ -186,7 +185,7 @@ canvas {
   background: rgba(0, 0, 0, 0.3);
   margin: 0;
   display: none;
-  overflow: none;
+  overflow: hidden;
 }
 
 .loseText {
@@ -212,7 +211,7 @@ canvas {
   background: rgba(255, 255, 255, 0.3);
   margin: 0;
   display: none;
-  overflow: none;
+  overflow: hidden;
 }
 
 .pauseText {
@@ -262,7 +261,7 @@ canvas {
     .backgroundLevelOne {
         background-position: center;
         background-size: cover;
-        background-repeat: none;
+        background-repeat: no-repeat;
     }
 }
 
@@ -279,7 +278,7 @@ canvas {
     .backgroundLevelTwo {
         background-position: center;
         background-size: cover;
-        background-repeat: none;
+        background-repeat: no-repeat;
     }
 }
 
@@ -291,13 +290,13 @@ canvas {
   background-position-y: 30%;
   display: block;
   background-size: cover;
-  background-repeat: none;
+  background-repeat: no-repeat;
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
     .backgroundLevelThree {
         background-position: center;
         background-size: cover;
-        background-repeat: none;
+        background-repeat: no-repeat;
     }
 }
