--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Quicksand&display=swap');
+
 /*---------------------------------- General Styles*/
 html {
   height: 100vh;
@@ -23,9 +24,9 @@ button {
 }
 
 .wrapper {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 
@@ -59,20 +60,20 @@ button {
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
-    #heroImage {
-        padding: 10vh 3vh 0 3vh;
-    }
+  #heroImage {
+    padding: 10vh 3vh 0 3vh;
+  }
 
-    #menu p a,
-    #menu button {
-        width: 60vw;
-    }
+  #menu p a,
+  #menu button {
+    width: 60vw;
+  }
 
-    #heroImage {
-        background-position-x: center;
-        background-size: cover;
-        background-repeat: no-repeat; 
-    }
+  #heroImage {
+    background-position-x: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
 
 /* Main menu */
@@ -88,53 +89,59 @@ button {
 }
 
 /* How-to-play modal*/
+/* These following styles create the moving paddle and arrows shifting colours */
 #tutorialPaddle {
-    width: 20vw;
-    height: 3vh;
-    background: black;
-    border-radius: 5px;
-    animation: movingPaddle 3s infinite;
+  width: 20vw;
+  height: 3vh;
+  background: black;
+  border-radius: 5px;
+  animation: movingPaddle 3s infinite;
 }
 
 @media screen and (min-aspect-ratio: 1/1) {
-    #tutorialPaddle {
-        width: 20%;
-    }
+  #tutorialPaddle {
+    width: 20%;
+  }
 }
 
 #tutorialArrows {
-    font-size: 3rem;
-    color: rgba(0, 0, 0, 0.2);
+  font-size: 3rem;
+  color: rgba(0, 0, 0, 0.2);
 }
 
 #tutorialArrows #rightTutorialArrow {
-    animation: shiftingArrows 3s infinite ease-out;
-    animation-delay: 1.5s;
+  animation: shiftingArrows 3s infinite ease-out;
+  animation-delay: 1.5s;
 }
 
 #tutorialArrows #leftTutorialArrow {
-    animation: shiftingArrows 3s infinite;
+  animation: shiftingArrows 3s infinite;
 }
 
+/* Animations for the tutorial */
 @keyframes movingPaddle {
-    0%, 100% {
-        margin-left: 0vw;
-    }
 
-    50% {
-        margin-left: 80%;
+  0%,
+  100% {
+    margin-left: 0vw;
+  }
 
-    }
+  50% {
+    margin-left: 80%;
+
+  }
 }
 
 @keyframes shiftingArrows {
-    0%, 100% {
-        color: rgba(0, 0, 0, 0.6);
-    }
 
-    50% {
-        color: rgba(0, 0, 0, 0.2);
-    }
+  0%,
+  100% {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  50% {
+    color: rgba(0, 0, 0, 0.2);
+  }
 }
 
 /*---------------------------------- Game pages */
@@ -152,7 +159,10 @@ canvas {
 }
 
 /* All the screens for winning, losing and pausing */
-.gamePaused, .gameWon, .gameLost {
+/* The white overlay */
+.gamePaused,
+.gameWon,
+.gameLost {
   position: absolute;
   z-index: 100;
   height: 100vh;
@@ -163,14 +173,18 @@ canvas {
   overflow: hidden;
 }
 
-.pauseText, .loseText, .winText {
+/* The containers with a white background */
+.pauseText,
+.loseText,
+.winText {
   background: #fff;
   padding: 3vw;
   margin: 10vh 20vw;
   border-radius: 10px;
 }
 
-.pauseText div button, 
+/* General styles of buttons on the game screens */
+.pauseText div button,
 .loseText div button,
 .winText div button {
   display: block;
@@ -180,31 +194,33 @@ canvas {
 
 /* --------------------- Movement buttons --------------- */
 .movementButtons {
-    margin: 0;
-    width: 49vw;
-    border: none;
-    display: inline;
-    height: 20vh;
-    background: none;
-    display: none;
+  margin: 0;
+  width: 49vw;
+  border: none;
+  display: inline;
+  height: 20vh;
+  background: none;
+  display: none;
 }
 
 .movementButtons i {
-    font-size: 4rem;
-    color: rgba(0, 0, 0, 0.3);
+  font-size: 4rem;
+  color: rgba(0, 0, 0, 0.3);
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
-    .movementButtons {
-        display: inline-block
-    }
+  .movementButtons {
+    display: inline-block
+  }
 }
 
+/* Removing the preset outline for all buttons */
 button:focus {
-    outline: none;
+  outline: none;
 }
 
 /* ------------------------- Levels -------------------- */
+/* The three following sets the backgrounds and background positions */
 .backgroundLevelOne {
   background-image: url("../img/breakoutBgOne.jpg");
   background-position-y: 80%;
@@ -220,6 +236,8 @@ button:focus {
   background-position-y: 30%;
 }
 
+/* General styles and media queries for background images */
+
 .backgroundLevelOne,
 .backgroundLevelTwo,
 .backgroundLevelThree {
@@ -228,11 +246,12 @@ button:focus {
 }
 
 @media screen and (max-aspect-ratio: 1/1) {
-    .backgroundLevelOne,
-    .backgroundLevelTwo,
-    .backgroundLevelThree {
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
+
+  .backgroundLevelOne,
+  .backgroundLevelTwo,
+  .backgroundLevelThree {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 }
